# mcp-ui-components

./: .gitignore  README.md  pyproject.toml
demo/: host.py
demo/_vendor_host/: README.md  index.html  sandbox.html
docs/: python-from-typescript.md
src/lineage_mcp/: __init__.py  data.py  provider.py  server.py  tools.py
src/lineage_mcp/widgets/: viewer.html
tests/: test_provider.py
widget/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
widget/src/: lineage-app.ts
